--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="images/copy.png">
         </div>
         <div>
-            <button><img src="images/generate.png"> Generate</button>
+            <button onclick="createpassword()"><img src="images/generate.png"> Generate</button>
         </div>
 
     </div>
